# ufc-data

./: DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
data/: all_data_final.csv  cleaned_events.csv  cleaned_odds.csv  complete_ufc_data.csv  event_results.csv  events_odds_mapping.csv  events_raw.csv  fighter_stats.csv  odds_raw.csv  prepped_data_for_modelling.csv
notebooks/EDA/: 20231012 Attributes vs match outcome.ipynb  20231016 Data checks.ipynb  20231203 Historic odds.ipynb
notebooks/ml experiments/: 20231012 GBM test.ipynb  20231012 Initial GBM test.ipynb
notebooks/ml-experiments/: 20231012 Initial GBM test.ipynb  20231016 Logistic regression test.ipynb
ufc/: constants.py  load_data.py  utils.py
ufc/preprocessing/: __main__.py  clean_raw_data.py  clean_scraped_data.py  create_complete_dataset.py  feature_eng.py  feature_extraction.py  prep_data.py
ufc/scraper/: __main__.py  scrape_events.py  scrape_fighters.py  scrape_odds.py
